--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_auth: ^4.4.0
   cloud_firestore: ^4.5.0
   firebase_analytics: ^10.2.0
+  sqflite: ^2.2.8+1
+  path_provider: ^2.0.14
+  path: ^1.8.3
+  
 
 dev_dependencies:
   flutter_test:
@@ -51,8 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  test: ^1.24.1
   build_runner: ^2.4.1
+  test: ^1.24.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
