--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path_provider: ^2.0.14
   path: ^1.8.3
   share_plus: ^7.0.1
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
   
 
 dev_dependencies:
