--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
   equatable: ^2.0.5
+  flutter_launcher_icons: ^0.13.1
   
 
 dev_dependencies:
