--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   bloc: ^8.1.2
   equatable: ^2.0.5
   flutter_launcher_icons: ^0.13.1
+  font_awesome_flutter: ^10.4.0
+  flutter_spinkit: ^5.2.0
+  lottie: ^2.4.0
+  animated_background: ^2.0.0
   
 
 dev_dependencies:
